--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,6 +1,6 @@
 <!-- Portfolio Grid Section -->
 <section id="portfolio-anchor"></section>
-<section id="portfolio" style="padding: 100px 100px;">
+<section id="portfolio" style="padding: 100px 0px;">
     <div class="container reveal">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -18,7 +18,10 @@
         <div class="row">
 
             <!-- LightWidget WIDGET -->
-            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/cbf92bd7e4325ca9a57019a92a73bf55.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+            <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe
+                src="https://cdn.lightwidget.com/widgets/cbf92bd7e4325ca9a57019a92a73bf55.html" scrolling="no"
+                allowtransparency="true" class="lightwidget-widget"
+                style="width:100%;border:0;overflow:hidden;"></iframe>
         </div>
     </div>
 </section>
