--- a/_includes/css/kalvin.css
+++ b/_includes/css/kalvin.css
@@ -40,6 +40,12 @@ html {
     text-decoration: underline;
 }
 
+.page-scroll.btn.btn-xl:hover {
+    border-color: white;
+    color: white;
+    background-color: #000000;
+}
+
 .collection-brand-gallery {
     display: inline;
     width: 150px;
