--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -8,40 +8,39 @@
                     <div class="col-xs-5 col-format-text revealL mobile">
                         <h2 class="section-heading heading">Our Collection</h2>
                         <p class="paragraphs">
-                            Our brands are specially curated and each frame is chosen with the needs of our clientele in mind. Not all of our collections are featured in our online shop, we encourage you to come visit us!
-                            <div class="row">
-                                <div class="col-lg-12">
+                            Our brands are specially curated and each frame is chosen with the needs of our clientele in
+                            mind. Not all of our collections are featured in our online shop, we encourage you to come
+                            visit us!
+                        <div class="row">
+                            <div class="col-lg-12">
 
-                                    <div class="col-lg-6 paragraphs">
-                                        Tom Ford
-                                        <br>Gucci
-                                        <br>Salvatore Ferragamo
-                                        <br>For Art’s Sake
-                                        <br>Silhouette
-                                        <br>Swarovski
-                                        <br>Unique Design Milano
-                                        <br>Lacoste
-                                        <br>Carrera
-                                        <br>Anacolé
-                                    </div>
-                                    <div class="col-lg-6 paragraphs">
-                                        Saint Laurent
-                                        <br>Michael Kors
-                                        <br>Easyclip
-                                        <br>Guess
-                                        <br>Marciano
-                                        <br>O&X New York
-                                        <br>Tom’s
-                                        <br>Converse
-                                        <br>Eyelet
-                                        <br>Laura Biagiotti
-                                    </div>
+                                <div class="col-lg-6 paragraphs">
+                                    Tom Ford
+                                    <br>Celine
+                                    <br>Fendi
+                                    <br>Gucci
+                                    <br>Saint Laurent
+                                    <br>Salvatore Ferragamo
+                                    <br>Ray-Ban
+                                    <br>For Art’s Sake
                                 </div>
 
+                                <div class="col-lg-6 paragraphs">
+                                    Silhouette
+                                    <br>Unique Design Milano
+                                    <br>Lacoste
+                                    <br>Carrera
+                                    <br>Michael Kors
+                                    <br>Easyclip
+                                    <br>Tom’s
+                                    <br>Converse 
+                                </div>
                             </div>
-                            <br>
-                            <br>Looking for something in particular?
-                            <br>Contact us and we will make every effort to find it for you.
+
+                        </div>
+                        <br>
+                        <br>Looking for something in particular?
+                        <br>Contact us and we will make every effort to find it for you.
                         </p>
                     </div>
 
