--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -38,9 +38,10 @@
                             </div>
 
                         </div>
-                        <br>
+                        <br>And a lot more
                         <br>Looking for something in particular?
-                        <br>Contact us and we will make every effort to find it for you.
+                        <br><a href="https://mayoptical.com/#contact-anchor">Contact us</a> and we will make every
+                        effort to find it for you.
                         </p>
                     </div>
 
