--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -40,7 +40,9 @@
                         </div>
                         <br>And a lot more
                         <br>Looking for something in particular?
-                        <br><a href="https://mayoptical.com/#contact-anchor">Contact us</a> and we will make every
+                        <br>
+                        <a href="https://mayoptical.com/#contact-anchor"
+                            style="color: black; text-decoration: underline;">Contact us</a> and we will make every
                         effort to find it for you.
                         </p>
                     </div>
