--- a/_includes/collection.html
+++ b/_includes/collection.html
@@ -38,7 +38,7 @@
                             </div>
 
                         </div>
-                        <br>And a lot more
+                        <br>And a lot more!
                         <br>Looking for something in particular?
                         <br>
                         <span><a href="https://mayoptical.com/#contact-anchor"
