--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,21 +14,26 @@
                 <div class="text-white"><b>Phone:</b> <br><a href="tel:+1 416-291-8989"> (416) 291-8989</a><br></div>
             </div>
             <div class="col-lg-6 text-center" style="padding-bottom: 50px;">
-                <div style="color: white;"><b>Email:</b> <br><a href="mailto:hello@mayoptical.com"><span class="__cf_email__" data-cfemail="771f121b1b18371a160e1807031e14161b5914181a">hello@mayoptical.com</span></a>
+                <div style="color: white;"><b>Email:</b> <br><a href="mailto:hello@mayoptical.com"><span
+                            class="__cf_email__"
+                            data-cfemail="771f121b1b18371a160e1807031e14161b5914181a">hello@mayoptical.com</span></a>
                 </div>
             </div>
         </div>
 
         <div class="row text-center">
             <section id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11514.35648086294!2d-79.3009995!3d43.8228814!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa567a537795e4c53!2sMay%20Optical!5e0!3m2!1sen!2sca!4v1612149661963!5m2!1sen!2sca" width="800" height="400"
-                    frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11514.35648086294!2d-79.3009995!3d43.8228814!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa567a537795e4c53!2sMay%20Optical!5e0!3m2!1sen!2sca!4v1612149661963!5m2!1sen!2sca"
+                    width="800" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0"></iframe>
             </section>
         </div>
 
         <div class="row text-center" style="color: white; ">
 
-            <div class="col-lg-6 text-center" style="padding-top: 50px;"><b>Address:</b> <br>668 Silver Star Blvd. Unit 206,<br> Scarborough, ON, M1V 5N1
+            <div class="col-lg-6 text-center" style="padding-top: 50px;"><b>Address:</b> <br>668 Silver Star Blvd. Unit
+                206,<br> Scarborough, ON, M1V 5N1
             </div>
 
             <div class="col-lg-6 text-center" style="color: white; padding-top: 50px;">
@@ -61,15 +66,20 @@
                         </tr>
                         <tr>
                             <td style="padding-right: 30px;">Sunday</td>
-                            <td style="padding-left: 30px;" class="time">11:00 - 4:00</td>
+                            <td style="padding-left: 30px;" class="time">12:00 - 4:00</td>
                         </tr>
                     </tbody>
                 </table>
+                After hour visits by appointment only.
             </div>
         </div>
-        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Please note:<br> Our hours may be subject to change at any time. We are closed for all statutory holidays.</div>
-        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Public Transit:<br>From Finch Station: Any 53 Steeles East bus, exit at Silver Star Blvd. and Steeles Ave. East <br>From Kennedy Station: 57 Midland bus, exit at 633 Silver Star Blvd. or at Silver Star Blvd at Steeles Ave. East. </div>
-        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Parking:<br>There is ample free parking in front of the store
+        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Please note:<br> Our
+            hours may be subject to change at any time. We are closed for all statutory holidays.</div>
+        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Public Transit:<br>From
+            Finch Station: Any 53 Steeles East bus, exit at Silver Star Blvd. and Steeles Ave. East <br>From Kennedy
+            Station: 57 Midland bus, exit at 633 Silver Star Blvd. or at Silver Star Blvd at Steeles Ave. East. </div>
+        <div class="row text-center contact-text-mobile" style="color:white; margin-top: 40px; ">Parking:<br>There is
+            ample free parking in front of the store
         </div>
 
     </div>
